# fs-4-firmware

./: .gitignore
mbed-os/targets/upload_method_cfg/: SFE_ARTEMIS.cmake
stm32-test/: CMakeLists.txt  custom_targets.json5  main.cpp  mbed_app.json5
stm32-test/cubemx/: stm32-test.txt
stm32-test/custom_targets/: CMakeLists.txt  custom_targets.json5
